2006-05-27  Mathias Dahl  <mathias.dahl@gmail.com>

	* tumme.el: Change a lot of `(if .. (progn ..)' to `(when ..)'.

2006-05-27  Thien-Thi Nguyen  <ttn@gnu.org>

	* emacs-lisp/ewoc.el (ewoc--create): No longer
	take HEADER and FOOTER args.  Update unique caller.

	(ewoc-delete): Compute last node once before looping.

	(ewoc--node-branch): Merge into unique caller.

	(ewoc--node): Don't define constructor
	make-ewoc--node for this structure.

2006-05-27  Mathias Dahl  <mathias.dahl@gmail.com>

	* dired.el (dired-mode-map): Change `tumme-tag-remove' to
	`tumme-delete-tag'. Rename `Remove Image Tag' to `Delete Image
	Tag'.  Change "Compare directories..." to "Change Directories...".

	* tumme.el (tumme-delete-tag): Rename from `tumme-tag-remove'.
	(tumme-setup-dired-keybindings): Change `tumme-add-remove' to
	`tumme-delete-tag'.

	* dired.el (dired-mode-map): Move tumme commands to Operate,
	Regexp and Immediate menus. Change "Add Comment" to "Add Image
	Comment". Change "Add Image Tag" to "Add Image Tags".

2006-05-26  Luc Teirlinck  <teirllm@auburn.edu>

	* shell.el (shell-mode): Call shell-dirtrack-mode after
	list-buffers-directory is made a local variable, to avoid setting
	the default value.

2006-05-26  Kevin Ryde  <user42@zip.com.au>

	* info.el (Info-index-next): Use where-is-internal to report
	actual binding of Info-index-next, rather than hard-coded `,'.

2006-05-26  Eli Zaretskii  <eliz@gnu.org>

	* menu-bar.el (menu-bar-apropos-menu): Move "Find Key in Manual"
	and "Find Command in Manual" to here.

	* buff-menu.el (list-buffers-noselect): For Info buffers, use
	Info-current-file as the file name.

2006-05-26  Jonathan Yavner  <jyavner@member.fsf.org>

	* ses.el (defadvice undo-more): Delete this defadvice.  The undo
	overrides will now be done a different way.
	(ses-set-parameter): Reapply this function for undo.
	(ses-set-header-row): Reconstruct header row during undo.
	(ses-widen): New function.